Use SLF4J API for logging